new tabs section created

--- a/styles.scss
+++ b/styles.scss
@@ -47,6 +47,7 @@ html {
     font-size: calc(100vw / 375 * 14);
   }
 }
+$transition: all 0.3s linear;
 
 body {
   font-family: "Effra", sans-serif;
@@ -55,6 +56,7 @@ body {
 
 a {
   text-decoration: none;
+  transition: $transition;
 }
 
 ul {
@@ -67,12 +69,20 @@ button {
   border: none;
   font-family: inherit;
   cursor: pointer;
+  transition: $transition;
+  border-radius: 40px;
+  font-size: 1.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 2rem;
+  height: 3.563rem;
 }
 
 .nav-header {
   position: sticky;
-  padding: 1.875rem 5rem;
-  background: #000000;
+  padding: 1.875rem 6rem;
+  // background: #000000;
   .navbar {
     display: flex;
     align-items: center;
@@ -95,12 +105,16 @@ button {
       display: flex;
       align-items: center;
       gap: 2.5rem;
+      margin-left: 8rem;
       li {
         div {
           overflow: hidden;
           a {
             color: #ffffff;
             font-size: 1.125rem;
+            &:hover {
+              color: #a8ff35;
+            }
           }
         }
       }
@@ -113,18 +127,191 @@ button {
         font-size: 1.125rem;
         &:first-child {
           color: #ffffff;
+          &:hover {
+            color: #a8ff35;
+          }
         }
         &:last-child {
-          display: flex;
-          align-items: center;
-          justify-content: center;
           color: #000000;
           background: #ffffff;
           border-radius: 40px;
           padding: 0 2rem;
           height: 2.625rem;
+          &:hover {
+            background: #a8ff35;
+            border-radius: 10px;
+          }
         }
       }
     }
+  }
+}
+
+.hero {
+  background: #000000;
+  height: 100vh;
+  background-image: url(./assets/ornament.svg);
+  background-size: cover;
+  animation: backgroundScroll 7s linear infinite forwards;
+  .lines {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    // z-index: -1;
+  }
+  &-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    // margin-top: 14vh;
+    min-height: 57vh;
+    h1 {
+      color: #ffffff;
+      font-size: 4.5rem;
+      font-weight: 900;
+      max-width: 43.75rem;
+      line-height: 5.04rem;
+    }
+    p {
+      color: #8b8b8b;
+      font-size: 1.125rem;
+      max-width: calc(43.75rem - 200px);
+      line-height: 1.688rem;
+      margin-top: 0.5rem;
+    }
+    &-get_started {
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
+      margin-top: 1.75rem;
+      margin-left: 8rem;
+      button {
+        color: #000000;
+        background: #a8ff35;
+        font-weight: 700;
+        &:hover {
+          background: #8cc83a;
+          border-radius: 10px;
+        }
+      }
+      div {
+        display: flex;
+        align-items: baseline;
+        flex-direction: column;
+        gap: 0.5rem;
+        span {
+          color: #ffffff;
+          font-family: "Good Dog New", sans-serif;
+          font-size: 0.875rem;
+          max-width: 5.813rem;
+          line-height: 0.875rem;
+          transform: rotate(6deg);
+        }
+      }
+    }
+  }
+}
+
+.new-tabs {
+  background: #a8ff35;
+  padding: 8.75rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  h1 {
+    font-size: 4.5rem;
+    font-weight: 900;
+    max-width: 43.75rem;
+    line-height: 5.04rem;
+  }
+  p {
+    font-size: 1.125rem;
+    max-width: 41.625rem;
+    line-height: 1.688rem;
+    margin-top: 3.75rem;
+    text-align: center;
+  }
+  &-center {
+    display: flex;
+    align-items: center;
+    margin-top: 3.75rem;
+    gap: 1.75rem;
+    &-info {
+      display: flex;
+      align-items: flex-end;
+      flex-direction: column;
+      gap: 0.5rem;
+
+      span {
+        font-family: "Good Dog New", sans-serif;
+        font-size: 0.875rem;
+        max-width: 5.813rem;
+        line-height: 0.875rem;
+        transform: rotate(6deg);
+        text-align: center;
+      }
+    }
+    .right {
+      flex-direction: column-reverse;
+      align-items: baseline;
+    }
+    &-box {
+      background: #f5f5f5;
+      border-radius: 16px;
+      position: relative;
+      width: 31.25rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 12.5rem;
+      img {
+        position: absolute;
+        height: 5.125rem;
+        &:first-child {
+          z-index: 2;
+        }
+        &:nth-child(2) {
+          top: -61vh;
+          left: -15rem;
+          transform: rotate(-4deg);
+          z-index: 4;
+        }
+        &:nth-child(3) {
+          top: -56vh;
+          left: -4.75rem;
+          transform: rotate(2deg);
+          z-index: 3;
+        }
+        &:nth-child(4) {
+          top: -61vh;
+          transform: rotate(-2deg);
+          left: 8rem;
+          z-index: 2;
+        }
+        &:nth-child(5) {
+          top: -56vh;
+          left: 22rem;
+          transform: rotate(2deg);
+          z-index: 1;
+        }
+        &:not(:first-child) {
+          height: 5.15rem;
+        }
+      }
+    }
+  }
+}
+
+@keyframes backgroundScroll {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 0px -100%;
   }
 }
