--- a/styles.scss
+++ b/styles.scss
@@ -137,9 +137,26 @@ button {
           border-radius: 40px;
           padding: 0 2rem;
           height: 2.625rem;
-          &:hover {
+          position: relative;
+          overflow: hidden;
+          span {
+            position: relative;
+            z-index: 2;
+          }
+          div {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: #a8ff35;
-            border-radius: 10px;
+            transition: $transition;
+            transform: translateY(100%);
+          }
+          &:hover {
+            div {
+              transform: translateY(0);
+            }
           }
         }
       }
@@ -302,6 +319,287 @@ button {
         &:not(:first-child) {
           height: 5.15rem;
         }
+      }
+    }
+  }
+}
+
+.increase {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8.75rem 0;
+  p {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 4.75rem;
+    max-width: 72rem;
+    span {
+      color: #adadad;
+    }
+  }
+}
+
+.startups {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.5rem;
+  padding: 8.75rem 0;
+  h2 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 4.75rem;
+  }
+  &-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+  }
+}
+
+.platforms {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.5rem;
+  padding: 8.75rem 0;
+  background: #fafafa;
+  margin-bottom: 4rem;
+  h2 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 4.75rem;
+  }
+  &-icons {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    span {
+      height: 7.75rem;
+      width: 7.75rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 8px;
+      position: relative;
+      overflow: hidden;
+      img {
+        position: relative;
+        z-index: 2;
+      }
+      &:hover {
+        div {
+          transform: translateY(0);
+        }
+      }
+    }
+    div {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #a8ff35;
+      transition: $transition;
+      transform: translateY(100%);
+    }
+  }
+}
+
+.tweets {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 8.75rem;
+  &-shots {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 2.5rem;
+  }
+  button {
+    position: relative;
+    background: #000000;
+    color: #ffffff;
+    margin-top: 5rem;
+    overflow: hidden;
+    border: 1px solid #000000;
+    div {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #ffffff;
+      transition: $transition;
+      transform: translateY(100%);
+    }
+    span {
+      position: relative;
+      z-index: 2;
+    }
+    &:hover {
+      color: #000000;
+      border-color: #000000;
+      background: transparent;
+      div {
+        transform: translateY(0);
+      }
+    }
+  }
+}
+
+.deals {
+  background: #000000;
+  padding: 8.75rem 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  h2 {
+    color: #ffffff;
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 4.75rem;
+  }
+  &-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2.5rem;
+    margin-top: 2.5rem;
+  }
+  &-card {
+    height: 40rem;
+    background: #ffffff;
+    padding: 2rem;
+    border-radius: 10px;
+    position: relative;
+    &-top {
+      padding-bottom: 2rem;
+      margin-bottom: 2rem;
+      h3 {
+        font-size: 2.25rem;
+      }
+      p {
+        font-size: 1.125rem;
+        padding-top: 0.25rem;
+      }
+      border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    }
+    &-cost {
+      display: flex;
+      align-items: baseline;
+      gap: 0.5rem;
+      h2 {
+        color: #000000;
+      }
+      h4 {
+        font-size: 1.125rem;
+      }
+    }
+    ul {
+      margin-top: 1rem;
+      li {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        font-size: 1.125rem;
+        margin-bottom: 1.688rem;
+      }
+    }
+    &.regular {
+      background: #a8ff35;
+      button {
+        color: #ffffff;
+        background: #000000;
+        div {
+          background: #ffffff;
+        }
+        &:hover {
+          color: #000000;
+          border-color: #000000;
+          div {
+            transform: translateY(0);
+          }
+        }
+      }
+    }
+    button {
+      position: absolute;
+      background: #a8ff35;
+      bottom: 2rem;
+      left: 2rem;
+      right: 2rem;
+      overflow: hidden;
+      div {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #8cc83a;
+        transition: $transition;
+        transform: translateY(100%);
+      }
+      span {
+        position: relative;
+        z-index: 2;
+      }
+      &:hover {
+        div {
+          transform: translateY(0);
+        }
+      }
+    }
+  }
+}
+
+.join {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2.5rem;
+  flex-direction: column;
+  background: #a8ff35;
+  padding: 8.75rem 0;
+  h1 {
+    font-size: 4.5rem;
+    font-weight: 900;
+    max-width: 46.25rem;
+    line-height: 5.04rem;
+    text-align: center;
+    span {
+      color: #87d322;
+    }
+  }
+  button {
+    position: relative;
+    background: #000000;
+    color: #ffffff;
+    overflow: hidden;
+    border: 1px solid #000000;
+    div {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #ffffff;
+      transition: $transition;
+      transform: translateY(100%);
+    }
+    span {
+      position: relative;
+      z-index: 2;
+    }
+    &:hover {
+      color: #000000;
+      border-color: #000000;
+      background: transparent;
+      div {
+        transform: translateY(0);
       }
     }
   }
