--- a/styles.scss
+++ b/styles.scss
@@ -605,6 +605,36 @@ button {
   }
 }
 
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.875rem 5rem;
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 0.625rem;
+    cursor: pointer;
+    img {
+      height: 40px;
+    }
+    h4 {
+      font-size: 1.5rem;
+      font-family: "Inter", sans-serif;
+      font-weight: 700;
+    }
+  }
+  ul {
+    display: flex;
+    align-items: center;
+    gap: 2.5rem;
+    li {
+      overflow: hidden;
+      font-size: 1.125rem;
+    }
+  }
+}
+
 @keyframes backgroundScroll {
   0% {
     background-position: 0 0;
