--- a/styles.scss
+++ b/styles.scss
@@ -107,8 +107,8 @@ button {
       gap: 2.5rem;
       margin-left: 8rem;
       li {
+        overflow: hidden;
         div {
-          overflow: hidden;
           a {
             color: #ffffff;
             font-size: 1.125rem;
@@ -122,7 +122,7 @@ button {
     .btns {
       display: flex;
       align-items: center;
-      gap: 2.5rem;
+      overflow: hidden;
       button {
         font-size: 1.125rem;
         &:first-child {
@@ -170,14 +170,6 @@ button {
   background-image: url(./assets/ornament.svg);
   background-size: cover;
   animation: backgroundScroll 7s linear infinite forwards;
-  .lines {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    // z-index: -1;
-  }
   &-content {
     display: flex;
     align-items: center;
@@ -196,7 +188,7 @@ button {
     p {
       color: #8b8b8b;
       font-size: 1.125rem;
-      max-width: calc(43.75rem - 200px);
+      max-width: 34.75rem;
       line-height: 1.688rem;
       margin-top: 0.5rem;
     }
@@ -235,11 +227,12 @@ button {
 
 .new-tabs {
   background: #a8ff35;
-  padding: 8.75rem 0;
+  padding: 8.75rem 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
   h1 {
     font-size: 4.5rem;
     font-weight: 900;
@@ -263,7 +256,12 @@ button {
       align-items: flex-end;
       flex-direction: column;
       gap: 0.5rem;
-
+      .char {
+        transform: translateY(100%);
+      }
+      img {
+        transform: scale(0);
+      }
       span {
         font-family: "Good Dog New", sans-serif;
         font-size: 0.875rem;
@@ -276,6 +274,9 @@ button {
     .right {
       flex-direction: column-reverse;
       align-items: baseline;
+      .char {
+        transform: translateY(-100%);
+      }
     }
     &-box {
       background: #f5f5f5;
@@ -328,7 +329,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8.75rem 0;
+  padding: 8.75rem 2rem;
   p {
     font-size: 4rem;
     font-weight: 700;
@@ -346,7 +347,8 @@ button {
   justify-content: center;
   flex-direction: column;
   gap: 2.5rem;
-  padding: 8.75rem 0;
+  padding: 8.75rem 2rem;
+  text-align: center;
   h2 {
     font-size: 4rem;
     font-weight: 700;
@@ -356,6 +358,21 @@ button {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
+    width: 70%;
+    img {
+      transform: translateY(100%);
+      opacity: 0;
+      width: 100%;
+    }
+    @media (max-width: 998px) {
+      width: 100%;
+    }
+    @media (max-width: 600px) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    @media (max-width: 480px) {
+      grid-template-columns: 1fr 1fr;
+    }
   }
 }
 
@@ -364,10 +381,11 @@ button {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 2.5rem;
-  padding: 8.75rem 0;
+  gap: 1.5rem;
+  padding: 8.75rem 2rem;
   background: #fafafa;
-  margin-bottom: 4rem;
+  padding-bottom: 4rem;
+  text-align: center;
   h2 {
     font-size: 4rem;
     font-weight: 700;
@@ -377,6 +395,8 @@ button {
     display: flex;
     align-items: center;
     gap: 1.5rem;
+    flex-wrap: wrap;
+    justify-content: center;
     span {
       height: 7.75rem;
       width: 7.75rem;
@@ -389,6 +409,9 @@ button {
       img {
         position: relative;
         z-index: 2;
+        transform: translateY(100%);
+        opacity: 0;
+        width: 70%;
       }
       &:hover {
         div {
@@ -414,11 +437,17 @@ button {
   align-items: center;
   flex-direction: column;
   padding-bottom: 8.75rem;
+  background: #fafafa;
   &-shots {
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 2.5rem;
+    img {
+      transform: translateY(100px);
+      opacity: 0;
+      width: 90%;
+    }
   }
   button {
     position: relative;
@@ -427,6 +456,7 @@ button {
     margin-top: 5rem;
     overflow: hidden;
     border: 1px solid #000000;
+    transform: translateY(100%);
     div {
       position: absolute;
       top: 0;
@@ -454,7 +484,7 @@ button {
 
 .deals {
   background: #000000;
-  padding: 8.75rem 0;
+  padding: 8.75rem 2rem;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -469,13 +499,20 @@ button {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2.5rem;
     margin-top: 2.5rem;
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media (max-width: 600px) {
+      grid-template-columns: 1fr;
+    }
   }
   &-card {
-    height: 40rem;
+    height: 39rem;
     background: #ffffff;
     padding: 2rem;
     border-radius: 10px;
     position: relative;
+    overflow: hidden;
     &-top {
       padding-bottom: 2rem;
       margin-bottom: 2rem;
@@ -492,21 +529,33 @@ button {
       display: flex;
       align-items: baseline;
       gap: 0.5rem;
+      overflow: hidden;
       h2 {
         color: #000000;
+        transform: translateY(100%);
+        opacity: 0;
       }
       h4 {
         font-size: 1.125rem;
+        transform: translateY(200%);
+        opacity: 0;
       }
     }
     ul {
       margin-top: 1rem;
       li {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
+        span {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+        }
         font-size: 1.125rem;
         margin-bottom: 1.688rem;
+        overflow: hidden;
+        span {
+          transform: translateY(100%);
+          opacity: 0;
+        }
       }
     }
     &.regular {
@@ -553,6 +602,9 @@ button {
         }
       }
     }
+    .char {
+      transform: translateY(100%);
+    }
   }
 }
 
@@ -563,7 +615,7 @@ button {
   gap: 2.5rem;
   flex-direction: column;
   background: #a8ff35;
-  padding: 8.75rem 0;
+  padding: 8.75rem 2rem;
   h1 {
     font-size: 4.5rem;
     font-weight: 900;
@@ -631,7 +683,41 @@ button {
     li {
       overflow: hidden;
       font-size: 1.125rem;
+      transition: $transition;
+      &:hover {
+        a {
+          color: #a8ff35;
+        }
+      }
     }
+  }
+  @media (max-width: 768px) {
+    padding: 5rem 2rem;
+  }
+  @media (max-width: 600px) {
+    flex-direction: column;
+    gap: 5rem;
+    ul {
+      flex-direction: column;
+    }
+  }
+}
+
+.wrapper,
+.word {
+  overflow: hidden;
+}
+
+// scroll reveal animation
+.reveal {
+  animation: slide-in 0.6s cubic-bezier(0.5, 0, 0.5, 1) both;
+  animation-delay: calc(3ms * var(--char-index) + 1000ms);
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
   }
 }
 
